2008-09-28  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Add g_hash_table_steal and g_hash_table_steal_all bindings,
	patch by Marc-André Lureau

2008-09-28  Jürg Billeter  <j@bitron.ch>

	* vala/valatypeparameter.vala:
	* vala/valatypesymbol.vala:

	Remove unused array_types fields, patch by Marc-André Lureau

2008-09-28  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Fix fopen and fdopen bindings, patch by Marc-André Lureau

2008-09-28  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Add g_chdir binding, patch by Marc-André Lureau

2008-09-28  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Add g_key_file_load_from_dirs binding, patch by Marc-André Lureau

2008-09-28  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Fix g_compute_checksum_for_{data,string} bindings,
	patch by Marc-André Lureau

2008-09-28  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-0.10/:

	Fix gst_tag_list_copy binding, patch by Marc-André Lureau

	* vapi/gstreamer-0.10.vapi: regenerated

2008-09-28  Jürg Billeter  <j@bitron.ch>

	* vala/valasourcefile.vala:

	Support parsing from a string, patch by Andrea Del Signore,
	fixes bug 553926

2008-09-28  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala:

	Support static properties, patch by Ali Sabil

2008-09-27  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gio-2.0/:

	Fix g_file_query_info binding, fixes bug 548222

	* vapi/gio-2.0.vapi: regenerated

2008-09-27  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-0.10/:

	Fix gst_element_get_bus and gst_pipeline_get_bus bindings,
	fixes bug 548219

	* vapi/gstreamer-0.10.vapi: regenerated

2008-09-27  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/libsoup-2.4/:

	Fix soup_uri_copy, soup_uri_normalize, and soup_uri_to_string
	bindings, patch by Víctor Manuel Jáquez Leal, fixes bug 553568

	* vapi/libsoup-2.4.vapi: regenerated

2008-09-27  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala:
